--- a/app/src/main/res/layout/item_vh_size_list.xml
+++ b/app/src/main/res/layout/item_vh_size_list.xml
@@ -56,7 +56,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <com.leebeebeom.closetnote.ui.view.icon.AddImageIcon
-                    setAddIcon="@{sizeListVH.tuple.imageUri}"
+                    addIconVisibility="@{sizeListVH.tuple.imageUri}"
                     style="@style/myAddImageIcon"
                     android:scaleX="0.5"
                     android:scaleY="0.5"
