--- a/app/src/main/res/layout/item_vh_recent_search.xml
+++ b/app/src/main/res/layout/item_vh_recent_search.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -9,14 +10,14 @@
             type="com.leebeebeom.closetnote.data.model.model.RecentSearch" />
     </data>
 
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    <androidx.constraintlayout.widget.ConstraintLayout style="@style/myMatchWrap">
 
-        <androidx.appcompat.widget.AppCompatImageView
-            setRecentSearchIcon='@{""}'
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <com.leebeebeom.closetnote.ui.view.icon.RecentSearchIcon
+            android:id="@+id/iconRecentSearch"
+            style="@style/myWrapContent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             android:layout_marginVertical="@dimen/_6sdp"
             android:layout_marginStart="@dimen/_12sdp"
             android:layout_marginEnd="@dimen/_2sdp"
@@ -26,8 +27,10 @@
             tools:src="@drawable/icon_recent_search" />
 
         <com.google.android.material.textview.MaterialTextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            style="@style/myWrapMatch"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/iconRecentSearch"
+            app:layout_constraintTop_toTopOf="parent"
             android:layout_marginStart="@dimen/_4sdp"
             android:alpha="0.8"
             android:ellipsize="end"
@@ -39,31 +42,26 @@
             android:textSize="@dimen/_10sdp"
             tools:text="안녕하세여" />
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="end">
+        <com.google.android.material.textview.MaterialTextView
+            style="@style/myWrapContent"
+            android:layout_marginEnd="@dimen/_6sdp"
+            android:alpha="0.9"
+            android:text="@{recentSearch.date}"
+            android:textSize="@dimen/_8sdp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/iconDelete"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="02월 13일" />
 
-            <com.google.android.material.textview.MaterialTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginEnd="@dimen/_6sdp"
-                android:alpha="0.9"
-                android:text="@{recentSearch.date}"
-                android:textSize="@dimen/_8sdp"
-                tools:text="02월 13일" />
-
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/iconDelete"
-                setCloseIcon='@{""}'
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="end"
-                android:alpha="0.8"
-                android:paddingStart="0dp"
-                android:paddingEnd="@dimen/_8sdp"
-                tools:src="@drawable/icon_close" />
-        </androidx.appcompat.widget.LinearLayoutCompat>
-    </androidx.appcompat.widget.LinearLayoutCompat>
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/iconDelete"
+            style="@style/myWrapContent"
+            android:alpha="0.8"
+            android:paddingStart="0dp"
+            android:paddingEnd="@dimen/_8sdp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/icon_close" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
