--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <attr name="backgroundGrey" format="color" />
-    <attr name="goBtnBackground" format="color" />
+    <attr name="myBackgroundGrey" format="color" />
     <attr name="myColorControl" format="color" />
     <attr name="treeBackgroundColor" format="color" />
     <attr name="myCardViewBackground" format="color" />
     <attr name="myIndicatorColor" format="color" />
-    <attr name="mySignButtonHeight" format="dimension" />
-    <attr name="myNormalButtonHeight" format="dimension" />
-    <attr name="mySettingCardViewHeight" format="dimension" />
+    <attr name="myEditTextHeight" format="dimension" />
 </resources>
