--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,6 +17,8 @@
         <item name="placeholderTextAppearance">@style/myTextSize11sdp</item>
         <item name="shapeAppearance">@style/myEditTextCorner</item>
         <item name="suffixTextAppearance">@style/myTextSize10sdp</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
     </style>
 
     <!--    auto complete text view layout style-->
@@ -28,11 +30,15 @@
         <item name="placeholderTextAppearance">@style/myTextSize11sdp</item>
         <item name="shapeAppearance">@style/myEditTextCorner</item>
         <item name="suffixTextAppearance">@style/myTextSize10sdp</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
     </style>
 
-    <style name="myAppNameTextView" parent="Widget.MaterialComponents.TextView">
+    <style name="myAppNameTextView" parent="myWrapContent">
         <item name="android:text">@string/app_name</item>
         <item name="fontFamily">@font/ballet_harmony</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
     </style>
 
     <style name="myOutlineButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
@@ -44,21 +50,67 @@
         <item name="rippleColor">@android:color/transparent</item>
     </style>
 
+    <style name="mySignInButton" parent="myOutlineButton">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">@dimen/_48sdp</item>
+    </style>
+
+    <style name="myNormalButton" parent="myOutlineButton">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">@dimen/_36sdp</item>
+        <item name="android:textColor">?colorPrimary</item>
+        <item name="backgroundTint">?myColorControl</item>
+        <item name="strokeColor">@android:color/transparent</item>
+    </style>
+
     <style name="myCardView" parent="Widget.MaterialComponents.CardView">
         <item name="cardBackgroundColor">?myCardViewBackground</item>
         <item name="cardCornerRadius">@dimen/_4sdp</item>
         <item name="cardElevation">@dimen/_2sdp</item>
     </style>
 
+    <style name="myListCardView" parent="myCardView">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/_32sdp</item>
+        <item name="android:layout_marginHorizontal">@dimen/_12sdp</item>
+        <item name="android:layout_marginVertical">@dimen/_2sdp</item>
+    </style>
+
+    <style name="mySettingCardView" parent="myCardView">
+        <item name="android:layout_marginHorizontal">@dimen/_8sdp</item>
+        <item name="android:layout_marginVertical">@dimen/_4sdp</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">@dimen/_40sdp</item>
+    </style>
+
+    <style name="mySignInTextView" parent="myWrapContent">
+        <item name="android:textSize">@dimen/_9sdp</item>
+        <item name="android:alpha">0.7</item>
+
+    </style>
+
+    <style name="mySettingTextView" parent="myWrapContent">
+        <item name="android:layout_marginStart">@dimen/_12sdp</item>
+        <item name="android:textSize">@dimen/_12sdp</item>
+    </style>
+
     <style name="myCheckBox" parent="Widget.AppCompat.CompoundButton.CheckBox">
         <item name="alpha">0.8</item>
+        <item name="android:layout_width">@dimen/_20sdp</item>
+        <item name="android:layout_height">@dimen/_20sdp</item>
         <item name="android:clickable">false</item>
         <item name="enabled">false</item>
         <item name="android:enabled">false</item>
         <item name="buttonTint">?myColorControl</item>
     </style>
 
-    <style name="myFragmentMainTextView" parent="Widget.MaterialComponents.TextView">
+    <style name="myListCheckBox" parent="myCheckBox">
+        <item name="android:scaleX">0.7</item>
+        <item name="android:scaleY">0.7</item>
+        <item name="android:layout_marginStart">@dimen/_8sdp</item>
+    </style>
+
+    <style name="myFragmentMainTextView" parent="myWrapContent">
         <item name="android:textSize">@dimen/_16sdp</item>
         <item name="fontFamily">@font/noto_black</item>
         <item name="android:textStyle">bold</item>
@@ -66,17 +118,137 @@
         <item name="android:layout_marginTop">@dimen/_8sdp</item>
     </style>
 
-    <style name="myFragmentSubTextView" parent="Widget.MaterialComponents.TextView">
+    <style name="myFragmentSubTextView" parent="myWrapContent">
         <item name="android:textSize">@dimen/_12sdp</item>
         <item name="fontFamily">@font/noto_bold</item>
         <item name="android:layout_marginStart">@dimen/_12sdp</item>
         <item name="android:layout_marginTop">@dimen/_8sdp</item>
     </style>
 
-    <style name="myRecyclerView">
+    <style name="myFolderRecyclerViewGrid" parent="myMatchParent">
         <item name="android:clipToPadding">false</item>
         <item name="nestedScrollable">false</item>
         <item name="android:nestedScrollingEnabled">false</item>
         <item name="android:overScrollMode">never</item>
+    </style>
+
+    <style name="myRecyclerView" parent="myFolderRecyclerViewGrid">
+        <item name="android:layout_marginTop">@dimen/_8sdp</item>
+        <item name="android:minHeight">@dimen/_580sdp</item>
+        <item name="android:paddingTop">@dimen/_8sdp</item>
+        <item name="android:paddingBottom">@dimen/_80sdp</item>
+        <item name="android:background">@drawable/corner_round_background_grey</item>
+    </style>
+
+    <style name="myTreeTextView" parent="myWrapContent">
+        <item name="android:layout_marginStart">@dimen/_8sdp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">1</item>
+    </style>
+
+    <style name="myFab" parent="myWrapContent">
+        <item name="layout_anchor">@id/bottomAppBar</item>
+    </style>
+
+    <style name="myMatchParent">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
+
+    <style name="myWrapContent">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="myMatchWrap">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="myWrapMatch">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
+
+    <style name="myWrap0dp">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">0dp</item>
+    </style>
+
+    <style name="myProfileImageView">
+        <item name="civ_border_color">?myColorControl</item>
+        <item name="civ_border_width">1px</item>
+        <item name="android:alpha">0.1</item>
+    </style>
+
+    <style name="myEditText">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/_40sdp</item>
+    </style>
+
+    <style name="my0dpWrapContent">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="my0dp">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">0dp</item>
+    </style>
+
+    <style name="myHorizontalDivider">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">1px</item>
+        <item name="android:background">?myColorControl</item>
+    </style>
+
+    <style name="mySizeTimeTextView" parent="myWrapContent">
+        <item name="android:layout_marginStart">@dimen/_2sdp</item>
+        <item name="android:alpha">0.7</item>
+        <item name="android:textSize">@dimen/_7sdp</item>
+    </style>
+
+    <style name="mySortRadioButton" parent="my0dpWrapContent">
+        <item name="android:layout_marginStart">@dimen/_12sdp</item>
+    </style>
+
+    <style name="myContentSizeLayout" parent="myWrapContent">
+        <item name="android:layout_marginStart">@dimen/_4sdp</item>
+        <item name="android:layout_marginBottom">@dimen/_1sdp</item>
+        <item name="android:background">@drawable/item_contents_size_background</item>
+        <item name="android:paddingHorizontal">@dimen/_6sdp</item>
+        <item name="paddingBottomNoButtons">@dimen/_1sdp</item>
+    </style>
+
+    <style name="myContentSizeTextView" parent="myWrapMatch">
+        <item name="android:ellipsize">end</item>
+        <item name="android:textSize">@dimen/_8sdp</item>
+    </style>
+
+    <style name="myDragHandle" parent="myWrapMatch">
+        <item name="android:alpha">0.8</item>
+        <item name="android:scaleY">0.9</item>
+        <item name="android:visibility">gone</item>
+        <item name="android:paddingEnd">@dimen/_16sdp</item>
+    </style>
+
+    <style name="myAddImageIcon">
+        <item name="android:alpha">0.2</item>
+        <item name="android:clickable">false</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">0dp</item>
+    </style>
+
+    <style name="myDragHandle2" parent="myWrapContent">
+        <item name="alpha">0.9</item>
+        <item name="android:visibility">gone</item>
+    </style>
+
+    <style name="myPopupTextView" parent="myMatchWrap">
+        <item name="android:paddingVertical">@dimen/_8sdp</item>
+        <item name="android:paddingStart">@dimen/_12sdp</item>
+        <item name="android:paddingEnd">@dimen/_28sdp</item>
+        <item name="android:textSize">@dimen/_11sdp</item>
     </style>
 </resources>
