--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -38,9 +38,7 @@
         <!--        font-->
         <item name="fontFamily">@font/noto</item>
         <!--        my background color-->
-        <item name="backgroundGrey">@color/myBackgroundColor</item>
-        <!--        go button color-->
-        <item name="goBtnBackground">@color/myGoButtonBackgroundColor</item>
+        <item name="myBackgroundGrey">@color/myBackgroundColor</item>
         <!--        ripple color remove-->
         <item name="colorControlHighlight">@android:color/transparent</item>
         <!--        my color control-->
@@ -52,8 +50,6 @@
         <item name="android:includeFontPadding">false</item>
         <item name="myCardViewBackground">@color/white</item>
         <item name="myIndicatorColor">#D3D3D3</item>
-        <item name="mySignButtonHeight">@dimen/_48sdp</item>
-        <item name="myNormalButtonHeight">@dimen/_36sdp</item>
-        <item name="mySettingCardViewHeight">@dimen/_40sdp</item>
+        <item name="myEditTextHeight">@dimen/_40sdp</item>
     </style>
 </resources>
